Portfolio_one_update_25.08

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
   width: 1170px;
   margin: 0 auto;
 }
+body{
+  font-family: sans-serif;
+}
